--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.MuiFormControl-root {
+  /* border: 0; */
+  margin: 20px 0 !important;
+  display:  flex !important;
+  padding: 0;
+  position: relative;
+  min-width: 0;
+  flex-direction: column;
+  vertical-align: top;
+}
